<resources>
    <string name="app_name">Jose Luis</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Promociones">Promociones</string>
    <string name="Perfumes">Perfumes</string>
    <string name="Colonias">Colonias</string>

    <string name="Correo">Correo Electrónico</string>
    <string name="Contrasena">Contraseña</string>
    <string name="Olvido">¿Olvido su contraseña?</string>
    <string name="Ingresar">Ingresar</string>
    <string name="IngresarFacebook">Ingresar con Facebook</string>
    <string name="Nuevo">Nuevo aquí? Registrate Ahora</string>
</resources>
