<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/fondo_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/linearLayout2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="199dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:background="@drawable/nuevologo" />

            <EditText
                android:id="@+id/Email"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_grey600_24dp"
                android:background="@drawable/edit_text_border"
                android:drawablePadding="8dp"
                android:textSize="16sp"
                android:ems="10"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"
                android:padding="16dp"

                android:typeface="normal" />
            <EditText
                android:id="@+id/Contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_grey600_24dp"
                android:background="@drawable/edit_text_border"
                android:drawablePadding="8dp"
                android:textSize="16sp"
                android:ems="10"
                android:hint="@string/Contrasena"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:typeface="normal"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Olvido"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:id="@+id/txtOlvidarContrasena"
                android:textAlignment="center"
                android:textColor="#ffff"
                android:textStyle="bold" />
            <Button
                android:text="@string/Ingresar"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/btnIngresar"
                android:textAllCaps="false"
                android:background="@drawable/buttoningresar"
                android:layout_marginTop="20dp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/IngresarFacebook"
                android:drawableStart="@drawable/ic_facebook_white_24dp"
                android:id="@+id/btnFacebook"
                android:background="@drawable/button"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/Nuevo"
                android:id="@+id/txtCrearCuentas"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textColor="#ffff" />
        </LinearLayout>







    </ScrollView>

</RelativeLayout>